--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,8 @@ dependencies = [
     "aiofiles (>=24.1.0,<25.0.0)",
     "jinja2 (>=3.1.5,<4.0.0)",
     "bcrypt (>=4.3.0,<5.0.0)",
-    "pydantic[email] (>=2.10.6,<3.0.0)"
+    "pydantic[email] (>=2.10.6,<3.0.0)",
+    "ruff (>=0.9.9,<0.10.0)"
 ]
 
 
